# deeplx-rs

./: .dockerignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
configs/: config.toml
crates/dlx/: Cargo.toml
crates/dlx-svr/: Cargo.toml
crates/dlx-svr/src/: main.rs  run.rs
crates/dlx-svr/src/server/biz/: translate.rs
crates/dlx-svr/src/server/conf/: mod.rs
crates/dlx-svr/src/server/data/: translate.rs
crates/dlx-svr/src/server/pkgs/: error.rs  exit.rs  json.rs  mod.rs
crates/dlx-svr/src/server/routes/: middleware.rs  mod.rs  translate.rs
crates/dlx/src/: error.rs  impit.rs  lang.rs  lib.rs  oneshot.rs
crates/dlx/tests/: translate.rs
deploy/: Dockerfile  docker-bake.hcl  docker-compose.yml
src/: client.rs  config.rs  data.rs  error.rs  lang.rs  lib.rs  main.rs  run.rs  translate.rs
src/oneshot/: headers.rs  mod.rs  request.rs  response.rs
src/server/: mod.rs
src/server/biz/: translate.rs
src/server/conf/: mod.rs
src/server/data/: translate.rs
src/server/pkgs/: error.rs  exit.rs  json.rs
src/server/routes/: middleware.rs  mod.rs  state.rs  translate.rs
src/skeleton/: client.rs  config.rs  data.rs  error.rs  impit.rs  mod.rs  oneshot.rs  translate.rs  utils.rs
src/transport/: mod.rs  reqwest.rs
tests/: translate.rs
