[workspace]
members = ["crates/dlx", "crates/dlx-svr"]
resolver = "3"

[workspace.package]
version = "3.0.1"
edition = "2024"
authors = ["Homing So <i@homing.so>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/hominsu/deeplx-rs"
keywords = ["dlx", "deeplx", "translation"]
categories = ["text-processing", "internationalization"]

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
panic = "abort"

[patch.crates-io]
h2 = { git = "https://github.com/apify/h2" }
rustls = { git = "https://github.com/apify/rustls", branch = "impit-main" }
hyper-util = { git = "https://github.com/apify/hyper-util" }
