[package]
name = "dlx-svr"
description = "HTTP server for dlx"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
mimalloc = ["dep:mimalloc"]
rpmalloc = ["dep:rpmalloc"]
snmalloc = ["dep:snmalloc-rs"]
tikv-jemallocator = ["dep:tikv-jemallocator"]

[dependencies]
dlx = { path = "../dlx", version = "3.0.0" }

# data processing
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }

# memory allocator
mimalloc = { version = "0.1", optional = true }
rpmalloc = { version = "0.2", optional = true }
snmalloc-rs = { version = "0.3", optional = true }
tikv-jemallocator = { version = "0.6", optional = true }

# cli
clap = { version = "4.6", features = ["derive", "env"] }

# hot reload config
glob = "0.3"
notify = "8.2.0"
config = { version = "0.15", features = ["ini", "json", "yaml", "toml", "ron", "json5"] }

# logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# async runtime
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "signal"] }

# web stuff
tower-http = { version = "0.6", features = ["trace"] }
axum = { version = "0.8", features = ["tracing", "macros"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
