[package]
name = "dlx"
description = "A Rust package for unlimited DeepL translation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
# data processing
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
secrecy = "0.10"

# error handling
thiserror = { version = "2" }

# http client
impit = { git = "https://github.com/apify/impit.git", branch = "master" }
h2 = "=0.4.13"
reqwest = { version = "0.13.4", default-features = false, features = [
    "rustls",
    "charset",
    "http2",
    "http3",
    "brotli",
    "cookies",
    "deflate",
    "gzip",
    "json",
] }

[dev-dependencies]
tokio = { version = "1", features = ["io-util", "macros", "net", "rt", "sync", "time"] }
